--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "serve": "nuxt serve"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
