--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/fontawesome": "^1.1.2",
     "nuxt": "^2.13.0",
     "vue-slick-carousel": "^1.0.6"
