--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/fontawesome": "^1.1.2",
     "nuxt": "^2.13.0",
-    "vue-slick-carousel": "^1.0.6"
+    "vue-slick-carousel": "^1.0.6",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^2.0.0"
